--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <input type="reset">
     <button id="save">Save current design as HTML</button>
     <textarea id="design_html"></textarea>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script src="designs.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/designs.js"></script>
 </body>
 </html>
