--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <input type="reset">
     <button id="save">Save current design as HTML</button>
     <textarea id="design_html"></textarea>
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/designs.js"></script>
+    <script src="jquery-3.1.1.min.js"></script>
+    <script src="designs.js"></script>
 </body>
 </html>
