--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <h1>Pixel Art Maker</h1>
 
     <h2>Choose Grid Size</h2>
     <form id="sizePicker" onsubmit="makeGrid()">
         Grid Height:
-        <input type="number" id="input_height" name="height" min="1" value="20">
-        Grid Width:
+        <input type="number" id="input_height" name="height" min="1" value="20"> Grid Width:
         <input type="number" id="input_width" name="width" min="1" value="20">
         <input type="submit">
     </form>
@@ -38,7 +39,8 @@
     <input type="reset">
     <button id="save">Save current design as HTML</button>
     <textarea id="design_html"></textarea>
-    <script src="jquery-3.1.1.min.js"></script>
-    <script src="designs.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/designs.js"></script>
 </body>
+
 </html>
